--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 python-dotenv==1.0.0
 openai==1.12.0
-pandas==2.2.0
+pandas>=1.5.0
 openpyxl==3.1.2
-numpy==1.26.3 
+numpy>=1.21.0
+matplotlib>=3.5.0
+seaborn>=0.12.0 
